--- a/cart.html
+++ b/cart.html
@@ -62,7 +62,7 @@
               <a href="index.html" class="nav-link" aria-current="page">Hem</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link active">Produkter</a>
+              <a href="store.html" class="nav-link">Produkter</a>
             </li>
             <li class="navbar-brand mx-3 d-none d-md-block">
               <a class="nav-brand" href="index.html"
