--- a/recipes.html
+++ b/recipes.html
@@ -89,7 +89,210 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="container py-4">
+        <div class="p-5 mb-4 bg-light rounded-3">
+          <div class="container-fluid py-5">
+            <h1 class="display-5 fw-bold">Sök bland våra bästa recept!</h1>
+            <p class="col-md-8 fs-4">
+              Vill du baka några av våra bakverk själv? Här har vi samlat våra
+              mest populära recept!
+            </p>
+            <div class="input-group mb-3 w-50">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Sökord"
+                aria-label="Recipient's username"
+                aria-describedby="button-addon2"
+              />
+              <button
+                class="btn btn-outline-secondary"
+                type="button"
+                id="search-button"
+                aria-label="Search Button"
+              >
+                <i class="bi bi-search"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div
+          class="store-items row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-3"
+        >
+          <div class="col">
+            <div class="card border-0 h-100 align-items-top">
+              <img
+                class="card-img-top rounded-4 store-item-image"
+                width="312"
+                height="231"
+                aria-label="Product Image"
+                src="https://spoonacular.com/recipeImages/649593-312x231.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body h-100 d-flex flex-column">
+                <h5 class="card-title store-item-title">Lemon Cupcakes</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card border-0 h-100 align-items-top">
+              <img
+                class="card-img-top rounded-4 store-item-image"
+                width="312"
+                height="231"
+                aria-label="Product Image"
+                src="https://spoonacular.com/recipeImages/632527-312x231.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body h-100 d-flex flex-column">
+                <h5 class="card-title store-item-title">Apple Cupcakes</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card border-0 h-100 align-items-top">
+              <img
+                class="card-img-top rounded-4 store-item-image"
+                width="312"
+                height="231"
+                aria-label="Product Image"
+                src="https://spoonacular.com/recipeImages/652155-312x231.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body h-100 d-flex flex-column">
+                <h5 class="card-title store-item-title">
+                  Mocca Cupcakes With Dried Fruit
+                </h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card border-0 h-100 align-items-top">
+              <img
+                class="card-img-top rounded-4 store-item-image"
+                width="312"
+                height="231"
+                aria-label="Product Image"
+                src="https://spoonacular.com/recipeImages/636331-312x231.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body h-100 d-flex flex-column">
+                <h5 class="card-title store-item-title">Brownie Cupcakes</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card border-0 h-100 align-items-top">
+              <img
+                class="card-img-top rounded-4 store-item-image"
+                width="312"
+                height="231"
+                aria-label="Product Image"
+                src="https://spoonacular.com/recipeImages/658943-312x231.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body h-100 d-flex flex-column">
+                <h5 class="card-title store-item-title">S'mores Cupcakes</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 h-100 align-items-top">
+              <img
+                class="card-img-top rounded-4 store-item-image"
+                width="312"
+                height="231"
+                aria-label="Product Image"
+                src="https://spoonacular.com/recipeImages/653353-312x231.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body h-100 d-flex flex-column">
+                <h5 class="card-title store-item-title">
+                  Nutella Cupcakes & Peanut Butter Frosting
+                </h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card border-0 h-100 align-items-top">
+              <img
+                class="card-img-top rounded-4 store-item-image"
+                width="312"
+                height="231"
+                aria-label="Product Image"
+                src="https://spoonacular.com/recipeImages/654487-312x231.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body h-100 d-flex flex-column">
+                <h5 class="card-title store-item-title">
+                  Pancake Cupcakes With Maple Frosting and Candied Bacon
+                </h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card border-0 h-100 align-items-top">
+              <img
+                class="card-img-top rounded-4 store-item-image"
+                width="312"
+                height="231"
+                aria-label="Product Image"
+                src="https://spoonacular.com/recipeImages/664312-312x231.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body h-100 d-flex flex-column">
+                <h5 class="card-title store-item-title">
+                  Vanilla Cupcakes + Sour Cream Chocolate Ganache Frosting
+                </h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card border-0 h-100 align-items-top">
+              <img
+                class="card-img-top rounded-4 store-item-image"
+                width="312"
+                height="231"
+                aria-label="Product Image"
+                src="https://spoonacular.com/recipeImages/640148-312x231.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body h-100 d-flex flex-column">
+                <h5 class="card-title store-item-title">Cornflake Cupcakes</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card border-0 h-100 align-items-top">
+              <img
+                class="card-img-top rounded-4 store-item-image"
+                width="312"
+                height="231"
+                aria-label="Product Image"
+                src="https://spoonacular.com/recipeImages/657850-312x231.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body h-100 d-flex flex-column">
+                <h5 class="card-title store-item-title">
+                  Raspberry Cupcakes With Raspberry Icing
+                </h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer>
       <!-- place footer here -->
     </footer>
