--- a/store.html
+++ b/store.html
@@ -133,7 +133,10 @@
                 >
                   Mer info
                 </button>
-                <button type="button" class="btn btn-primary btn-sm">
+                <button
+                  type="button"
+                  class="btn btn-primary btn-sm shop-item-add-to-cart"
+                >
                   Lägg i varukorg
                 </button>
               </div>
@@ -159,7 +162,7 @@
               <h5 class="store-item-title"></h5>
               <button
                 type="button"
-                class="btn-close"
+                class="btn-close shop-item-close"
                 data-bs-dismiss="modal"
                 aria-label="Close"
               ></button>
