--- a/recipes.html
+++ b/recipes.html
@@ -123,7 +123,7 @@
         <div
           class="recipes row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-3"
         >
-          <div class="col">
+          <div class="col recipe-item" onClick="showRecipe(649593)">
             <div class="card border-0 h-100 align-items-top">
               <img
                 class="card-img-top rounded-4 store-item-image"
@@ -139,7 +139,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col recipe-item" onClick="showRecipe(632527)">
             <div class="card border-0 h-100 align-items-top">
               <img
                 class="card-img-top rounded-4 store-item-image"
@@ -155,7 +155,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col recipe-item" onClick="showRecipe(652155)">
             <div class="card border-0 h-100 align-items-top">
               <img
                 class="card-img-top rounded-4 store-item-image"
@@ -173,7 +173,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col recipe-item" onClick="showRecipe(636331)">
             <div class="card border-0 h-100 align-items-top">
               <img
                 class="card-img-top rounded-4 store-item-image"
@@ -189,7 +189,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col recipe-item" onClick="showRecipe(658943)">
             <div class="card border-0 h-100 align-items-top">
               <img
                 class="card-img-top rounded-4 store-item-image"
@@ -204,7 +204,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col recipe-item" onClick="showRecipe(653353)">
             <div class="card border-0 h-100 align-items-top">
               <img
                 class="card-img-top rounded-4 store-item-image"
@@ -222,7 +222,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col recipe-item" onClick="showRecipe(654487)">
             <div class="card border-0 h-100 align-items-top">
               <img
                 class="card-img-top rounded-4 store-item-image"
@@ -240,7 +240,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col recipe-item" onClick="showRecipe(664312)">
             <div class="card border-0 h-100 align-items-top">
               <img
                 class="card-img-top rounded-4 store-item-image"
@@ -258,7 +258,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col recipe-item" onClick="showRecipe(640148)">
             <div class="card border-0 h-100 align-items-top">
               <img
                 class="card-img-top rounded-4 store-item-image"
@@ -274,7 +274,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col recipe-item" onClick="showRecipe(657850)">
             <div class="card border-0 h-100 align-items-top">
               <img
                 class="card-img-top rounded-4 store-item-image"
@@ -293,23 +293,112 @@
           </div>
         </div>
       </div>
+      <div class="modal-container">
+        <div
+          class="modal fade recipe-modal"
+          id="recipe-modal"
+          tabindex="-1"
+          aria-labelledby="recipe-title"
+          aria-hidden="true"
+        >
+          <div
+            class="modal-dialog modal-dialog-centered modal-fullscreen-md-down modal-lg"
+          >
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="recipe-title">Brownie Cupcakes</h5>
+                <button
+                  type="button"
+                  class="btn-close shop-item-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <img
+                src="https://spoonacular.com/recipeImages/636331-556x370.jpg"
+                alt=""
+                class="recipe-image"
+              />
+              <div class="modal-body">
+                <h5 class="m-3">Ingredienser:</h5>
+                <ul class="list-group ingredient-list px-3">
+                  <li class="list-group-item">
+                    4 ounces (120 grams) unsweetened chocolate, chopped
+                  </li>
+                  <li class="list-group-item">
+                    1/2 cup (113 grams) unsalted butter, cut into pieces
+                  </li>
+                  <li class="list-group-item">
+                    1 1/4 cups (250 grams) granulated white sugar
+                  </li>
+                  <li class="list-group-item">
+                    1 teaspoon pure vanilla extract
+                  </li>
+                  <li class="list-group-item">3 large eggs</li>
+                  <li class="list-group-item">
+                    3/4 cup (95 grams) all purpose flour
+                  </li>
+                </ul>
+                <h5 class="m-3">Gör så här:</h5>
+                <ul
+                  class="list-group list-group-numbered instruction-list px-3"
+                >
+                  <li class="list-group-item">
+                    Preheat oven to 325 degrees F (170 degrees C). Turbo broiler
+                    150 Degrees
+                  </li>
+                  <li class="list-group-item">
+                    Melt the chopped chocolate and butter in a stainless steel
+                    bowl placed over a saucepan of simmering water. Once the
+                    chocolate is melted and smooth, remove from heat and let
+                    cool for a few minutes
+                  </li>
+                  <li class="list-group-item">
+                    Then stir (can also use a hand mixer) in the sugar.
+                  </li>
+                  <li class="list-group-item">
+                    Add the vanilla and then add the eggs, one at a time, mixing
+                    well after each addition.
+                  </li>
+                  <li class="list-group-item">
+                    Mix in the flour and salt until well blended.
+                  </li>
+                  <li class="list-group-item">
+                    Evenly divide the batter between the muffin cups.
+                  </li>
+                  <li class="list-group-item">
+                    Place in the preheated oven and bake for about 20 - 25
+                    minutes. For turbo broiler 150 Degrees for 13-15 minutes.
+                  </li>
+                  <li class="list-group-item">
+                    Remove from oven and let cool on a wire rack. Once the
+                    cupcakes have completely cooled, frost with icing.
+                  </li>
+                </ul>
+              </div>
+
+              <div class="modal-footer"></div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <!-- place footer here -->
     </footer>
     <template id="recipe-template"
-      ><div class="col">
+      ><div class="col recipe-item">
         <div class="card border-0 h-100 align-items-top">
           <img
             class="card-img-top rounded-4 recipe-item-image"
             width="312"
             height="231"
             aria-label="Recipe Image"
-            src="https://spoonacular.com/recipeImages/657850-312x231.jpg"
+            src=""
             alt="Card image cap"
           />
           <div class="card-body h-100 d-flex flex-column">
-            <h5 class="card-title recipe-item-title"></h5>
+            <span class="card-title recipe-item-title fw-semibold fs-5"></span>
           </div>
         </div></div
     ></template>
