--- a/about.html
+++ b/about.html
@@ -24,9 +24,16 @@
   </head>
 
   <body>
-    <header>
+    <a href="store.html" class="text-decoration-none text-dark">
+      <div class="bg-pastel-red">
+        <p class="text-center font-ambit-regular fw-semibold p-2">
+          Passa på! Just nu har vi fina alla hjärtans dag erbjudanden i shoppen!
+        </p>
+      </div>
+    </a>
+    <header class="sticky-top">
       <nav
-        class="navbar d-flex fixed-top navbar-expand-md bg-white flex-wrap justify-content-between mb-4 border-bottom"
+        class="navbar font-ambit d-flex navbar-expand-md bg-white flex-wrap justify-content-between mb-4 border-bottom"
       >
         <a class="nav-brand mx-3 d-md-none mx-3" href="index.html"
           ><img
@@ -107,8 +114,8 @@
         <div class="row align-items-md-stretch">
           <div class="col-md-6">
             <div class="h-100 p-5 bg-pastel-red rounded-3">
-              <h2 class="text-dark">Kontakta oss</h2>
-              <div class="container px-0 text-black pt-3">
+              <h2 class="font-gt-alpina text-dark">Kontakta oss</h2>
+              <div class="container px-0 text-black pt-3 font-ambit">
                 <form novalidate>
                   <div class="form-floating mb-3">
                     <input
@@ -141,21 +148,24 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 font-ambit">
             <div class="h-100 p-5">
-              <h2>Hitta hit</h2>
+              <h2 class="font-gt-alpina mb-3">Hitta hit</h2>
               <p>
                 Hjärtligt välkommen till Bagar-Basses bageri & konditori!
-                Bagar-Basses bageri ligger i hjärtat av Trollhättan, precis bredvid macken-lekplatsen, ca. 2 minuter ifrån
-                avfarten vid E45:an.
+                Bagar-Basses bageri ligger i hjärtat av Trollhättan, precis
+                bredvid macken-lekplatsen, ca. 2 minuter ifrån avfarten vid
+                E45:an.
               </p>
+              <p class="font-ambit-regular fw-semibold">Vår adress är:</p>
               <p>
-                <h6>Vår adress är:</h6>
                 Bagar-Basses bageri & konditori<br />Nydqvistsgatan 4A<br />
                 461 32 Trollhättan
               </p>
-              <h6>Telefonnummer:</h6><span>0144-106 20</span>
-              <h6>E-post:</h6>info@bagarbasse.se</p>
+              <p class="font-ambit-regular fw-semibold">Telefonnummer:</p>
+              <p>0144-106 20</p>
+              <p class="font-ambit-regular fw-semibold">E-post:</p>
+              <p>info@bagarbasse.se</p>
             </div>
           </div>
         </div>
