--- a/cart.html
+++ b/cart.html
@@ -31,9 +31,16 @@
   </head>
 
   <body id="cart">
-    <header>
+    <a href="store.html" class="text-decoration-none text-dark">
+      <div class="bg-pastel-red">
+        <p class="text-center font-ambit-regular fw-semibold p-2">
+          Passa på! Just nu har vi fina alla hjärtans dag erbjudanden i shoppen!
+        </p>
+      </div>
+    </a>
+    <header class="sticky-top">
       <nav
-        class="navbar d-flex fixed-top navbar-expand-md bg-white flex-wrap justify-content-between mb-4 border-bottom"
+        class="navbar font-ambit d-flex navbar-expand-md bg-white flex-wrap justify-content-between mb-4 border-bottom"
       >
         <a class="nav-brand mx-3 d-md-none mx-3" href="index.html"
           ><img
