--- a/recipes.html
+++ b/recipes.html
@@ -25,9 +25,16 @@
   </head>
 
   <body id="recipes">
-    <header>
+    <a href="store.html" class="text-decoration-none text-dark">
+      <div class="bg-pastel-red">
+        <p class="text-center font-ambit-regular fw-semibold p-2">
+          Passa på! Just nu har vi fina alla hjärtans dag erbjudanden i shoppen!
+        </p>
+      </div>
+    </a>
+    <header class="sticky-top">
       <nav
-        class="navbar d-flex fixed-top navbar-expand-md bg-white flex-wrap justify-content-between mb-4 border-bottom"
+        class="navbar font-ambit d-flex navbar-expand-md bg-white flex-wrap justify-content-between mb-4 border-bottom"
       >
         <a class="nav-brand mx-3 d-md-none mx-3" href="index.html"
           ><img
@@ -94,8 +101,10 @@
       <div class="container py-4">
         <div class="p-5 mb-4 bg-light rounded-3">
           <div class="container-fluid py-5">
-            <h1 class="display-5 fw-bold">Sök bland våra bästa recept!</h1>
-            <p class="col-md-8 fs-4">
+            <h1 class="display-5 font-gatefold-demi">
+              Sök bland våra bästa recept!
+            </h1>
+            <p class="col-md-8 fs-4 py-4 font-gt-alpina">
               Vill du baka några av våra bakverk själv? Här har vi samlat våra
               mest populära recept!
             </p>
@@ -121,7 +130,7 @@
       </div>
       <div class="container">
         <div
-          class="recipes row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-3"
+          class="recipes font-gt-alpina row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-3"
         >
           <div class="col recipe-item" onClick="showRecipe(649593)">
             <div class="card border-0 h-100 align-items-top">
@@ -306,7 +315,7 @@
           >
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="recipe-title">Brownie Cupcakes</h5>
+                <h5 class="recipe-title font-gt-alpina"></h5>
                 <button
                   type="button"
                   class="btn-close shop-item-close"
@@ -320,61 +329,12 @@
                 class="recipe-image"
               />
               <div class="modal-body">
-                <h5 class="m-3">Ingredienser:</h5>
-                <ul class="list-group ingredient-list px-3">
-                  <li class="list-group-item">
-                    4 ounces (120 grams) unsweetened chocolate, chopped
-                  </li>
-                  <li class="list-group-item">
-                    1/2 cup (113 grams) unsalted butter, cut into pieces
-                  </li>
-                  <li class="list-group-item">
-                    1 1/4 cups (250 grams) granulated white sugar
-                  </li>
-                  <li class="list-group-item">
-                    1 teaspoon pure vanilla extract
-                  </li>
-                  <li class="list-group-item">3 large eggs</li>
-                  <li class="list-group-item">
-                    3/4 cup (95 grams) all purpose flour
-                  </li>
-                </ul>
-                <h5 class="m-3">Gör så här:</h5>
+                <h5 class="m-3 font-gt-alpina">Ingredienser:</h5>
+                <ul class="list-group ingredient-list px-3 font-ambit"></ul>
+                <h5 class="m-3 font-gt-alpina">Gör så här:</h5>
                 <ul
-                  class="list-group list-group-numbered instruction-list px-3"
-                >
-                  <li class="list-group-item">
-                    Preheat oven to 325 degrees F (170 degrees C). Turbo broiler
-                    150 Degrees
-                  </li>
-                  <li class="list-group-item">
-                    Melt the chopped chocolate and butter in a stainless steel
-                    bowl placed over a saucepan of simmering water. Once the
-                    chocolate is melted and smooth, remove from heat and let
-                    cool for a few minutes
-                  </li>
-                  <li class="list-group-item">
-                    Then stir (can also use a hand mixer) in the sugar.
-                  </li>
-                  <li class="list-group-item">
-                    Add the vanilla and then add the eggs, one at a time, mixing
-                    well after each addition.
-                  </li>
-                  <li class="list-group-item">
-                    Mix in the flour and salt until well blended.
-                  </li>
-                  <li class="list-group-item">
-                    Evenly divide the batter between the muffin cups.
-                  </li>
-                  <li class="list-group-item">
-                    Place in the preheated oven and bake for about 20 - 25
-                    minutes. For turbo broiler 150 Degrees for 13-15 minutes.
-                  </li>
-                  <li class="list-group-item">
-                    Remove from oven and let cool on a wire rack. Once the
-                    cupcakes have completely cooled, frost with icing.
-                  </li>
-                </ul>
+                  class="list-group list-group-numbered instruction-list px-3 font-ambit"
+                ></ul>
               </div>
 
               <div class="modal-footer"></div>
