--- a/index.html
+++ b/index.html
@@ -121,34 +121,19 @@
           ></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active">
-            <img
-              src="./images/Inspiration/cakes.webp"
-              class="w-100 d-block"
-              alt="First slide"
-            />
+          <div class="carousel-item carousel-item-1 active">
             <div class="carousel-caption d-none d-md-block">
               <h3>Title</h3>
               <p>Description</p>
             </div>
           </div>
-          <div class="carousel-item">
-            <img
-              src="./images/Inspiration/cookies.webp"
-              class="w-100 d-block"
-              alt="Second slide"
-            />
+          <div class="carousel-item carousel-item-2">
             <div class="carousel-caption d-none d-md-block">
               <h3>Title</h3>
               <p>Description</p>
             </div>
           </div>
-          <div class="carousel-item">
-            <img
-              src="./images/Inspiration/cupcakes.webp"
-              class="w-100 d-block"
-              alt="Third slide"
-            />
+          <div class="carousel-item carousel-item-3">
             <div class="carousel-caption d-none d-md-block">
               <h3>Title</h3>
               <p>Description</p>
@@ -175,7 +160,7 @@
         </button>
       </div>
     </main>
-    <div class="container-fluid bg-pastel-blue">
+    <div class="container-fluid bg-pastel-yellow">
       <div class="container">
         <footer class="py-5">
           <div class="row">
